log
Thu 21 Mar 2024 06:46:18 PM UTC: 
 tests:  0|5
total_score: 0/70
574699c
Thu 21 Mar 2024 06:56:45 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:22: error: expected expression before ‘int’
   57 |   for (int i =0; i < int get_size(List *L; i++)
      |                      ^~~
exercises.c:64:1: error: expected expression before ‘}’ token
   64 | }
      | ^
exercises.c:64:1: error: expected expression before ‘}’ token
exercises.c:56:7: error: unused variable ‘suma’ [-Werror=unused-variable]
   56 |   int suma = 0;
      |       ^~~~
exercises.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f99b80e
Thu 21 Mar 2024 06:57:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:23: error: expected expression before ‘int’
   57 |   for (int i = 0; i < int get_size(List *L); i++)
      |                       ^~~
exercises.c:59:16: error: invalid use of incomplete typedef ‘List’
   59 |       suma += L->data[i];
      |                ^~
Compilation failed
d5e70e4
Thu 21 Mar 2024 07:00:08 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:60:16: error: invalid use of incomplete typedef ‘List’
   60 |       suma += L->data[i];
      |                ^~
Compilation failed
137f6fe
Thu 21 Mar 2024 07:02:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
24c6d99
Thu 21 Mar 2024 07:03:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b8b8d2a
Thu 21 Mar 2024 07:09:04 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:68:15: error: implicit declaration of function ‘Front’ [-Werror=implicit-function-declaration]
   68 |       suma += Front(L);
      |               ^~~~~
exercises.c:69:7: error: implicit declaration of function ‘PopFront’; did you mean ‘popFront’? [-Werror=implicit-function-declaration]
   69 |       PopFront(L);
      |       ^~~~~~~~
      |       popFront
cc1: all warnings being treated as errors
Compilation failed
d36fbf3
Thu 21 Mar 2024 07:13:48 PM UTC: 
 exercises.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:7: error: redefinition of ‘suma’
   57 |   int suma = 0;
      |       ^~~~
exercises.c:56:7: note: previous definition of ‘suma’ with type ‘int’
   56 |   int suma = 0;
      |       ^~~~
exercises.c:68:12: error: expected expression before ‘List’
   68 |       next(List L);
      |            ^~~~
exercises.c:69:7: error: implicit declaration of function ‘PopFront’; did you mean ‘popFront’? [-Werror=implicit-function-declaration]
   69 |       PopFront(L);
      |       ^~~~~~~~
      |       popFront
cc1: all warnings being treated as errors
Compilation failed
2cea37d
Thu 21 Mar 2024 07:17:06 PM UTC: 
 exercises.c | 18 +++++++-----------
 1 file changed, 7 insertions(+), 11 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:61:15: error: implicit declaration of function ‘Front’ [-Werror=implicit-function-declaration]
   61 |       suma += Front(List* L);
      |               ^~~~~
exercises.c:61:21: error: expected expression before ‘List’
   61 |       suma += Front(List* L);
      |                     ^~~~
exercises.c:64:3: error: expected statement before ‘)’ token
   64 |   )
      |   ^
cc1: all warnings being treated as errors
Compilation failed
366869c
Thu 21 Mar 2024 07:17:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:61:15: error: implicit declaration of function ‘Front’ [-Werror=implicit-function-declaration]
   61 |       suma += Front(L);
      |               ^~~~~
exercises.c:64:3: error: expected statement before ‘)’ token
   64 |   )
      |   ^
cc1: all warnings being treated as errors
Compilation failed
d8ff822
Thu 21 Mar 2024 07:17:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:61:15: error: implicit declaration of function ‘Front’ [-Werror=implicit-function-declaration]
   61 |       suma += Front(L);
      |               ^~~~~
cc1: all warnings being treated as errors
Compilation failed
26555a1
Thu 21 Mar 2024 07:19:54 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:59:3: error: expected ‘,’ or ‘;’ before ‘int’
   59 |   int tamano = get_size(L);
      |   ^~~
exercises.c:60:24: error: ‘tamano’ undeclared (first use in this function)
   60 |   for (int i = 0; i <= tamano; i++)
      |                        ^~~~~~
exercises.c:60:24: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3016392
Thu 21 Mar 2024 07:20:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ad8a1c4
Thu 21 Mar 2024 07:20:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
66eb04b
Thu 21 Mar 2024 07:21:26 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:31: error: expected ‘;’ before ‘}’ token
   63 |       elemento = (int*)next(L)
      |                               ^
      |                               ;
   64 | 
   65 |     }
      |     ~                          
Compilation failed
0d07ba6
